src/objects/Students__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Fee__c  -  Fee_paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <picklist>
            <controllingField>University__c</controllingField>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>j</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>o</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>p</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>r</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>u</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>w</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>z</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_paid__c</fullName>
        <label>Fee paid</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Payment__c.Student__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gender_Picklist__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_You_Know_About_Us__c</fullName>
        <label>How do You Know About Us …?</label>
        <picklist>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdsBanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Known_Courses__c</fullName>
        <label>Known Courses</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sql Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obiee</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Known_Language__c</fullName>
        <label>Known Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telugu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannada</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marks_in_Percent__c</fullName>
        <label>Marks (in Percent)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Passout__c</fullName>
        <label>Passout</label>
        <picklist>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Btech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bcom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mcom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <picklist>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Working__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Working</label>
        <type>Checkbox</type>
    </fields>
    <label>Students</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>